App 이름 RUP로 변경

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">jolJakProjectTest</string>
+    <string name="app_name">RUP</string>
     <string name="kakao_app_key">6d2aa639e8ea6e75a8dd34f45ad60cf0</string>
 </resources>
